--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "just a test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "eslint": "^7.26.0",
@@ -17,8 +18,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "git-commit-msg-linter": "^3.1.0",
-    "husky": "^6.0.0",
+    "husky": "4.3.0",
+    "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
 }
