--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "just a test",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "author": "",
   "license": "ISC",
