--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "1.0.0",
   "description": "just a test",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
-  },
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "test": "jest",
+    "test:staged": "jest --passWithNoTests",
+    "lint": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "npm run test:staged"
+    ]
+  },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.26.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "4.3.0",
     "jest": "^26.6.3",
