chore: add flag --watch when run npm run test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "test:staged": "jest --passWithNoTests",
     "lint": "eslint"
   },
